--- a/force-app/main/default/classes/ChangeProjectActionButtonController.cls
+++ b/force-app/main/default/classes/ChangeProjectActionButtonController.cls
@@ -197,6 +197,7 @@ public with sharing class ChangeProjectActionButtonController {
         System.debug(' ## Updated assignments :: ' + assignmentToUpdate);
         UPDATE assignmentToUpdate;
     }
+@AuraEnabled
 Public static void fetchContactRecordsData(){
 }
     
