--- a/force-app/main/default/classes/AnnualAwardNominationsController.cls
+++ b/force-app/main/default/classes/AnnualAwardNominationsController.cls
@@ -13,7 +13,7 @@ public without sharing class AnnualAwardNominationsController {
                             SELECT Id, Award_Type__c,Fiscal_Year__c,Primary_Nomination__c,Secondary_Nomination__c,Nomination_Submitted__c,
                             Reason_for_award__c,Recognization_By__c,Resource__c,Resource__r.Name,Status__c,Type__c,RecordTypeId,CreatedById
                             FROM Reward_And_Recognition__c
-                            WHERE CreatedById =: UserId AND RecordTypeId =: nominationsRecTypeId AND Recognization_By__c =:UserId AND Status__c =: STATUS_NOMINATED
+                WHERE CreatedById =: UserId AND RecordTypeId =: nominationsRecTypeId AND Recognization_By__c =:UserId AND (Status__c =: STATUS_NOMINATED OR Status__c=:'Draft')
         ];
         } catch (Exception e) {
             throw new AuraHandledException('Unable to retrieve AnnualAwardNomination records: ' + e.getMessage());
@@ -23,7 +23,7 @@ public without sharing class AnnualAwardNominationsController {
     }
 
     @AuraEnabled
-    public static List<Reward_And_Recognition__c> createAnnualAwardNominationRecords(List<Reward_And_Recognition__c> recordsToCreate,Id currentfy) {
+    public static List<Reward_And_Recognition__c> createAnnualAwardNominationRecords(List<Reward_And_Recognition__c> recordsToCreate,Id currentfy,String status) {
         List<Reward_And_Recognition__c> awardListToInsert = new List<Reward_And_Recognition__c>();
         Id nominationsRecTypeId = Schema.SObjectType.Reward_And_Recognition__c.getRecordTypeInfosByName().get(RECORD_TYPE_NAME).getRecordTypeId();
         System.debug('### INSIDE createAnnualAwardNominationRecords');
@@ -32,6 +32,7 @@ public without sharing class AnnualAwardNominationsController {
         for(Reward_And_Recognition__c rrr : recordsToCreate) {
             rrr.RecordTypeId = nominationsRecTypeId;
             rrr.Fiscal_Year__c = currentfy;
+            rrr.Status__c=status;
             awardListToInsert.add(rrr);
         }
         
@@ -57,7 +58,7 @@ public without sharing class AnnualAwardNominationsController {
     }
 
     @AuraEnabled
-    public static List<Reward_And_Recognition__c> submitAnnualAwardNominationRecords(List<Reward_And_Recognition__c> recordsToSubmit,Id currentfy) {
+    public static List<Reward_And_Recognition__c> submitAnnualAwardNominationRecords(List<Reward_And_Recognition__c> recordsToSubmit,Id currentfy,String status) {
         List<Reward_And_Recognition__c> awardListToSubmit = new List<Reward_And_Recognition__c>();
         Id nominationsRecTypeId = Schema.SObjectType.Reward_And_Recognition__c.getRecordTypeInfosByName().get(RECORD_TYPE_NAME).getRecordTypeId();
         System.debug('### INSIDE submitAnnualAwardNominationRecords');
@@ -68,6 +69,7 @@ public without sharing class AnnualAwardNominationsController {
             rrr.RecordTypeId = nominationsRecTypeId;
             rrr.Fiscal_Year__c = currentfy;
             rrr.Nomination_Submitted__c = true;
+            rrr.Status__c=status;
             awardListToSubmit.add(rrr);
         }
         
