--- a/force-app/main/default/classes/RRController.cls
+++ b/force-app/main/default/classes/RRController.cls
@@ -317,10 +317,14 @@ public static final Id RR_SCORING_RECORDTYPEID = Schema.SObjectType.Reward_And_R
          system.debug('===Userinfo.getUserId()======'+Userinfo.getUserId());
         for(Reward_And_Recognition__c rr : [SELECT Id,Recognization_By__c,Recognization_By__r.Name,Name,Resource__r.Name,Resource__r.EMS_TM_User__c,Reason_for_award__c,Resource__r.EMS_TM_User__r.FullPhotoUrl,
                                             Resource__c,Award_Type__c,Fiscal_Year__c,Project__c,Types_of_Recognition__c,Project__r.Name,RecordTypeId,Fiscal_Year__r.Name,Type__c,Type_of_Shout_Out__c,
-                                            Comments__c,Shout_Out_Heading__c,CreatedDate,Status__c,RecordType.Name,of_Primary_Nominations__c,of_Secondary_Nominations__c FROM Reward_And_Recognition__c 
+                                            Comments__c,Shout_Out_Heading__c,CreatedDate,Status__c,RecordType.Name,of_Primary_Nominations__c,of_Secondary_Nominations__c,Nomination_Submitted__c FROM Reward_And_Recognition__c 
                                             WHERE Fiscal_Year__c=:fyId
                                             AND Type__c = 'Annual Award'
-                                            AND Recognization_By__c =:loggedinUser.Id]){
+                                            AND Recognization_By__c =:loggedinUser.Id
+                                            //smaske : [UAT_PR_013] : Only fetching Nominations Recordtype records which are submitted
+                                            AND RecordTypeId =: RR_NOMINATION_RECORDTYPEID
+                                            AND Nomination_Submitted__c = true
+                                            ]){
           
                 winnerdetails wd = new winnerdetails();
                  wd.awardType = rr.Award_Type__c;
